<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AIONAV Logging</string>
    <string name="startButtonText">Connect</string>
    <string name="endButtonText">Disconnect</string>
    <string name="startMeasureButtonText">Start Measuring</string>
    <string name="endMeasureButtonText">End Measuring</string>
    <string name="saveButtonText">Save</string>
    <string name="startLoggingButtonText">Start Logging</string>
    <string name="stopLoggingButtonText">Stop Logging</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ip_text">IP Address:</string>
    <string name="submit_ip_text">Submit</string>
    <string name="radio_bluetooth">Bluetooth</string>
    <string name="radio_wifi">WiFi</string>
    <string name="choose_device_button">Choose Device</string>
    <string name="current_connection">Connected to: </string>
    <string name="none"> None</string>

</resources>
