<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="9"
        android:layout_height="0dp">
        <ScrollView android:id="@+id/log_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >

            <TextView android:id="@+id/log_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:scrollbars="vertical"/>

            </ScrollView>

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/radio_bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_bluetooth"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_wifi"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
        </LinearLayout>
   <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <EditText android:id="@+id/ip_edit"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
       <Button android:id="@+id/submit_ip"
           android:layout_weight="1"
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:text="@string/submit_ip_text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/startButtonText"
            android:id="@+id/start_button"
            android:onClick="connectClick"/>

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/endButtonText"
            android:id="@+id/end_button"
            android:onClick="disconnectClick"/>

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/saveButtonText"
            android:id="@+id/save_button" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <Button
            android:layout_weight = "1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/startLoggingButtonText"
            android:id="@+id/start_log_button"
            android:onClick="startLogging"/>

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/stopLoggingButtonText"
            android:id="@+id/end_log_button"
            android:onClick="stopLogging"/>

    </LinearLayout>
</LinearLayout>
